--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     margin: 150px auto;
     border: 1px solid black;
     width: 200px;
@@ -7,11 +8,23 @@
     perspective-origin: 1000px;
 }
 
-.box {
+.box1 {
+    position: absolute;
     background: red;
     width: 100%;
     height: 100%;
-    transform: perspective(100px) rotateX(180deg) rotateY(30deg);
+    transform: perspective(1000px) rotateX(180deg) rotateY(30deg);
+    color: white;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+.box2 {
+    position: absolute;
+    background: blue;
+    width: 100%;
+    height: 100%;
+    transform: translateX(10rem);
     color: white;
     font-family: sans-serif;
     text-align: center;
