--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@
     background: blue;
     width: 100%;
     height: 100%;
-    transform: translateX(10rem);
+    transform: translateX(10rem) translateZ(-10rem);
     color: white;
     font-family: sans-serif;
     text-align: center;
