--- a/main.css
+++ b/main.css
@@ -6,6 +6,8 @@
     height: 200px;
     perspective: 1000px;
     perspective-origin: center;
+    transform: rotateY(130deg);
+    transform-style: preserve-3d;
 }
 
 .box1 {
